--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,14 @@ a {
     text-decoration: none;
 }
 
+input,
+textarea,
+select,
+button {
+    font-family: inherit;
+    font-size: inherit;
+}
+
 .btn {
     --height: 60px;
     border: 1px solid #2e80ce;
@@ -107,6 +115,7 @@ a {
 
 .logo__brand {
     display: block;
+    font-family: "Sora", sans-serif;
     font-weight: 400;
     font-size: 1.8em;
 }
@@ -430,4 +439,431 @@ a {
 .feature__hero--btn {
     display: inline-block;
     margin-top: 38px;
+}
+
+/* --------------member-------------- */
+
+.member-top {
+    text-align: center;
+}
+
+.member__btn {
+    margin-top: 38px;
+}
+
+.member__list {
+    margin-top: 98px;
+    display: flex;
+    gap: 30px;
+}
+
+.member-item__img-bg {
+    position: relative;
+    width: 270px;
+    height: 318px;
+    background: #eaf6ff;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.member-item__img {
+    position: absolute;
+    max-width: 100%;
+    height: 290px;
+    object-fit: cover;
+    bottom: 0;
+    transition: 0.25s;
+}
+
+.member-item__img:hover {
+    transform: scale(1.1);
+}
+
+.member-item__name {
+    margin-top: 12px;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    text-align: center;
+    color: #10375c;
+}
+
+.member-item__desc {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    text-align: center;
+    color: #575f66;
+}
+
+.member__control {
+    display: flex;
+    justify-content: center;
+    margin-top: 38px;
+    gap: 18px;
+}
+
+.member__control--btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border: 1px solid #575f66;
+    border-radius: 50%;
+    outline: none;
+    background: #fff;
+    color: #575f66;
+    transition: 0.25s;
+}
+
+.member__control--btn:hover {
+    color: #fff;
+    background: #2e80ce;
+    border-color: #2e80ce;
+    cursor: pointer;
+}
+
+.member__control--icon {
+    rotate: 180deg;
+}
+
+/* ----------install-app--------- */
+
+.install {
+    margin-top: 170px;
+    padding: 85px 0;
+}
+
+.install__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2e80ce;
+    border-radius: 4px;
+    padding: 0 70px;
+}
+
+.install__img {
+    margin-top: -95px;
+    display: block;
+    width: 284px;
+    height: 522px;
+    object-fit: cover;
+}
+
+.install__content {
+    max-width: 586px;
+}
+
+.install__heading {
+    max-width: 489px;
+    font-weight: 600;
+    font-size: 5rem;
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+    color: #ffffff;
+}
+
+.install__content--desc {
+    font-weight: 300;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #ffffff;
+}
+
+.install__row {
+    margin-top: 38px;
+}
+
+.install__btn {
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.install__btn--img {
+    margin-right: 11px;
+}
+
+/* ----------blog----------- */
+
+.blog {
+    margin-top: 85px;
+}
+
+.blog__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog__content {
+    flex-shrink: 0;
+}
+
+.blog__action {
+    display: block;
+    margin-top: 28px;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    color: #10375c;
+    text-decoration-line: underline;
+    text-underline-offset: 4px;
+}
+
+.blog__heading {
+    max-width: 470px;
+}
+
+.blog__control {
+    display: flex;
+    margin-top: 28px;
+    gap: 18px;
+}
+
+.blog__control--btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border: 1px solid #575f66;
+    border-radius: 50%;
+    outline: none;
+    background: #fff;
+    color: #575f66;
+    transition: 0.25s;
+}
+
+.blog__control--btn:hover {
+    color: #fff;
+    background: #2e80ce;
+    border-color: #2e80ce;
+    cursor: pointer;
+}
+
+.blog__control--icon {
+    rotate: 180deg;
+}
+
+.blog__list {
+    max-width: 570px;
+    display: flex;
+    gap: 30px;
+}
+
+.blog-item {
+    width: 270px;
+    height: 375px;
+}
+
+.blog-item:hover {
+    box-shadow: 0px 18px 50px rgba(0, 0, 0, 0.05);
+}
+
+.blog-item:hover .blog-item__more {
+    color: #10375c;
+}
+
+.blog-item__img {
+    display: block;
+    width: 270px;
+    height: 172px;
+    object-fit: cover;
+    border-radius: 12px 12px 0px 0px;
+}
+
+.blog-item__body {
+    border-top: none;
+    background: #ffffff;
+    border: 1px solid #e8ebee;
+    border-radius: 0 0 12px 12px;
+    padding: 18px 22px 21px;
+}
+
+.blog-item__title {
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1.62;
+    color: #10375c;
+}
+
+.blog-item__desc {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #575f66;
+}
+
+.blog-item__more {
+    display: block;
+    margin-top: 12px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 18px;
+    color: #2e80ce;
+}
+
+/* ------------appointment---------- */
+.appointment {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.appointment__inner {
+    position: relative;
+    background: #f6fbff;
+    padding: 100px 178px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.appointment__heading {
+    position: relative;
+    margin-bottom: 36px;
+}
+
+.appointment__heading::after {
+    position: absolute;
+    bottom: -18px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    content: "";
+    display: inline-block;
+    width: 136px;
+    height: 2px;
+    background: #2e80ce;
+}
+
+.appointment__desc {
+    max-width: 617px;
+    font-weight: 300;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    margin: 0 auto 38px;
+    color: #575f66;
+}
+/* ------footer---------- */
+
+.footer {
+    font-family: "Open Sans", sans-serif;
+    background: #10375c;
+    padding: 100px 0 0;
+}
+
+.footer__inner {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+    column-gap: 78px;
+}
+
+.footer__desc {
+    max-width: 336px;
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #a9b3bb;
+}
+
+.footer__heading {
+    font-weight: 600;
+    font-size: 1.6rem;
+    color: #ffffff;
+    line-height: 1.75;
+    margin-bottom: 20px;
+}
+
+.footer__list {
+    margin-bottom: 28px;
+}
+
+.footer__link {
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: #a9b3bb;
+    line-height: 1.86;
+    white-space: nowrap;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.footer__item {
+    margin-top: 10px;
+}
+
+.footer__social {
+    display: flex;
+    column-gap: 10px;
+}
+
+.footer__social--btn {
+    width: 32px;
+    height: 32px;
+    background: #ffffff;
+    border-radius: 50%;
+    color: #2e80ce;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 28px;
+    transition: 0.25s;
+}
+
+.footer__social--btn:hover {
+    background: #2e80ce;
+    color: #fff;
+}
+
+.footer-form {
+    margin-top: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-form__input {
+    width: 212px;
+    height: 46px;
+    outline: none;
+    border: 1px solid #406181;
+    border-radius: 4px;
+    background: transparent;
+    color: #fff;
+    padding: 10px;
+}
+
+.footer-form__input::placeholder {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    color: #9ca8b1;
+}
+
+.footer-form__submit {
+    --height: 46px;
+    min-width: 108px;
+    margin-left: 12px;
+    font-size: 1.4rem;
+    background: #2e80ce;
+    border-radius: 4px;
+}
+
+.footer__copyright {
+    padding: 28px 0 42px 0;
+    border-top: 1px solid #406181;
+}
+
+.footer__copyright-text {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    text-align: center;
+    color: #aab3ba;
 }
